--- a/.github/workflows/release-tag.yaml
+++ b/.github/workflows/release-tag.yaml
@@ -3,8 +3,12 @@ on:
     push:
         branches: [ 'master' ]
 jobs:
-    tag:
+    tag-and-publish:
+        name: "Tag and Publish"
         runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
         steps:
             -   name: Checkout repository
                 uses: actions/checkout@v3
